--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
+    "classnames": "^2.5.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
