--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ SPOTIFY_CLIENT_SECRET=
 NEXT_PUBLIC_SPOTIFY_REDIRECT_URI=
 UPSTASH_REDIS_URL=
 UPSTASH_REDIS_TOKEN=
+DATABASE_URL=
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
