--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json}'",
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "classnames": "^2.5.1",
     "next": "15.0.1",
+    "pg": "^8.13.1",
+    "prisma": "^5.22.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-icons": "^5.3.0",
