--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "classnames": "^2.5.1",
+    "crypto": "^1.0.1",
     "next": "15.0.1",
+    "oauth-1.0a": "^2.2.6",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-69d4b800-20241021",
