--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "@types/lodash": "^4.17.13",
     "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "15.0.1",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
